@@ -1,3 +1,14 @@
+2013-05-27 Miguel de Dios <miguel.dedios@artica.es>
+
+	* include/functions_gis.php: added function "gis_calculate_distance"
+	to calculate the distance between to points, and return in the
+	international metric system, kilometers.
+	
+	* operation/agentes/gis_view.php: added column with the show the
+	distance with the previous point.
+	
+	MERGED FROM THE TRUNK
+
 2013-05-24  Sergio Martin <sergio.martin@artica.es>
 
 	* include/functions.php
